Update exercises 19 and 20

--- a/19 - Webcam Fun/index.html
+++ b/19 - Webcam Fun/index.html
@@ -1,3 +1,12 @@
+<!-- getUserMedia() HTML5 Canvas 
+     photobooth with JS 
+      video from webcam, video can also be piped into a canvas element 
+      take photo, download photo files, and then with add effects to photo files 
+      rgbSplit(pixels)
+      ctx.globalAlpha for a ghosting effect 
+      green screen, pick a color that's in the background, and pick a green that's in the range of that specific color
+      and pull that out, and whatever is behind the "green screen" will show in the background -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
