--- a/24 - Sticky Nav/index-START.html
+++ b/24 - Sticky Nav/index-START.html
@@ -1,3 +1,5 @@
+<!-- how to make the nav bar stick when I scroll down a page
+-->  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,6 +57,37 @@
   </div>
 
 <script>
+  // selects the main nav bar
+  const nav = document.querySelector('#main');
+  const topofNav =nav.offsetTop;
+
+  // fixNav will run every single page
+  function fixNav() {
+    // scrollY is how far I've scr
+    console.log(topofNav, window.scrollY);
+  }
+
+  // when the top of the nav bar hits the top of the window, I want to make the nav bar fixed
+  function fixNav() {
+    if (window.scrollY >= topofNav) {
+
+      document.body.style.paddingTop = nav.offsetHeight + 'px';
+
+      // apply a class to the parent of nav, which is body
+      document.body.classList.add('fixed-nav');
+    } else {
+      document.body.style.paddingTop = 0;
+      document.body.classList.remove('fixed-nav');
+    }
+  }
+
+  // fixNav gets run anytime someone scrolls down the page
+  window.addEventListener('scroll', fixNav); 
+
+  // figure out where the top of the nav block bar is
+  // as soon as I hit the threshold of the top of the nav bar, 
+  // nav bar will listen for the change and adjust the top of itself 
+  // on page load, I need to grab wherever the top of nav bar actually looks like it is
 
 </script>
 
