--- a/28 - Video Speed Controller/index-START.html
+++ b/28 - Video Speed Controller/index-START.html
@@ -1,3 +1,7 @@
+<!-- mouseover/click and drag control over speed of video
+     change value on an input 
+     and that input change indirectly sets the playback rate on the video 
+     changes the visuals on the page -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -16,6 +20,49 @@
   </div>
 
 <script>
+  // the entire white div bar with class speed behind the speed-bar
+  const speed = document.querySelector('.speed');
+
+  // the colored filler speed div bar in front of .speed
+  const bar = speed.querySelector('.speed-bar');
+
+  // the video with class flex
+  const video = document.querySelector('.flex');
+
+  function handleMove(e) {
+
+    // the event is mousemove over the speed bar
+    // console.log(e);
+
+    // subtracting offsetTop because top of speed bar is not fixed on the page
+    // (there may be padding, margin, etc. )
+    const y = e.pageY - this.offsetTop;
+    
+    // console.log(y);
+    // y position as percent of speed bar's total height
+    const percent = y / this.offsetHeight;
+
+    // console.log(percent);
+
+    const min = 0.4;
+    const max = 4;
+    const height = Math.round(percent * 100) + '%';
+
+    // playbackRate = 1 * 3.6 + 0.4 = 4; which makes sense because 100% should be equivalent to a max of 4
+    const playbackRate = percent * (max - min) + min;
+
+    bar.style.height = height;
+
+    bar.textContent = playbackRate.toFixed(2) + 'x';
+
+    // console.log(playbackRate);
+    // console.log(percent);
+
+    // attached the playbackRate based on the height
+    video.playbackRate = playbackRate; 
+  }
+
+  speed.addEventListener('mousemove', handleMove);
 </script>
 </body>
 </html>
