--- a/29 - Countdown Timer/index.html
+++ b/29 - Countdown Timer/index.html
@@ -1,3 +1,5 @@
+<!-- timer that shows me how much time is left in a task and when I will be back
+     option to click on buttons for timed tasks, or enter number of minutes -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,11 +12,13 @@
 <body>
   <div class="timer">
     <div class="timer__controls">
+      <!-- data-time is the number of seconds I want to run on it -->
       <button data-time="20" class="timer__button">20 Secs</button>
       <button data-time="300" class="timer__button">Work 5</button>
       <button data-time="900" class="timer__button">Quick 15</button>
       <button data-time="1200" class="timer__button">Snack 20</button>
       <button data-time="3600" class="timer__button">Lunch Break</button>
+      <!-- this form is a custom form of minutes -->
       <form name="customForm" id="custom">
         <input type="text" name="minutes" placeholder="Enter Minutes">
       </form>
